# holafly-inventory-mgmt

./: .coverage  .env.example  .gitignore  Dockerfile.Inventory  Dockerfile.Procurement  README.md  conftest.py  docker-compose.yml  pyproject.toml  start_celery_worker.sh  start_env.sh  start_inventory.sh  start_procurement.sh
docs/: ports-and-adapters-medium-article.html  ports-and-adapters-medium-article.md
fixtures/: users.json
inventory/: db.sqlite3  pyproject.toml
inventory/config/: __init__.py  asgi.py  db.sqlite3  settings.py  test_settings.py  urls.py  wsgi.py
inventory/config/settings/: base.py  test_settings.py
inventory/inventory/: admin.py  models.py
inventory/inventory/adapters/events/celery/: celery_events_adapter.py
inventory/inventory/adapters/messaging/celery/: app.py  celery_redis_notification_adapter.py
inventory/inventory/adapters/persistence/django_orm/: django_inventory_adapter.py  models.py  tests.py
inventory/inventory/adapters/web/rest/: serializers.py  urls.py  views.py
inventory/inventory/config/: container.py
inventory/inventory/domain/: exceptions.py
inventory/inventory/domain/models/: product.py
inventory/inventory/domain/ports/events/: events_service.py
inventory/inventory/domain/ports/messaging/: notification_dispatcher.py
inventory/inventory/domain/ports/repositories/: inventory_repository.py
inventory/inventory/domain/services/: inventory_service.py
inventory/inventory/migrations/: 0001_initial.py  0002_alter_product_id.py
procurement/: db.sqlite3  main.py  pyproject.toml
procurement/adapters/messaging/celery/: app.py
procurement/adapters/persistence/sqlalchemy/: db.py  models.py  restock_request_adapter.py
procurement/adapters/web/rest/: app.py  auth.py  routes.py  schemas.py
procurement/config/: asgi.py  container.py  logging.py  settings.py  urls.py  wsgi.py
procurement/domain/models/: restock_request.py
procurement/domain/ports/repositories/: restock_request_repository.py
procurement/domain/services/: restock_request_service.py
products_api/config/: settings.py
tests/: fixtures.py
tests/inventory/: test_rest_api.py
tests/inventory/adapters/: test_celery_redis_adapter.py  test_django_inventory_adapter.py
tests/inventory/domain/: test_product.py
tests/inventory/services/: test_inventory_service.py
tests/procurement/: conftest.py  test_rest_api.py
tests/procurement/adapters/: test_celery_task.py  test_sqlalchemy_restock_request_adapter.py
tests/procurement/services/: test_restock_request_service.py
