[project]
name = "holafly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.5",
    "djangorestframework>=3.17.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "ipdb>=0.13.13",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["inventory"]
testpaths = ["tests"]
python_files = ["test_*.py"]
DJANGO_SETTINGS_MODULE = "config.settings.test_settings"
CELERY_BROKER_URL = "redis://localhost:6379/0"
markers = [
    "integration",
]
