[project]
name = "holafly"
version = "0.1.0"
description = "Holafly inventory + procurement services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["inventory", "procurement"]

[tool.pytest.ini_options]
pythonpath = ["inventory"]
testpaths = ["tests"]
python_files = ["test_*.py"]
DJANGO_SETTINGS_MODULE = "config.settings.test_settings"
markers = [
    "integration",
]

[tool.coverage.run]
branch = true
source = ["inventory/inventory", "procurement"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/manage.py",
    "*/main.py",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
