[project]
name = "inventory"
version = "0.1.0"
description = "Inventory service (Django + DRF)"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "whitenoise>=6.12.0",
]

[tool.uv]
package = false
