[project]
name = "procurement"
version = "0.1.0"
description = "Procurement service (FastAPI + SQLAlchemy)"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[tool.uv]
package = false
